assets/css/main.css
/**
 * Basic styling
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

@font-face {
  font-family: 'Quicksand', sans-serif;

}
body {
  /* we have 300 and 700 */
  font-weight: 300;
  color: #f7eedf;
  font-size: 1.3em;
  line-height: 1.5;
  font-weight: 300;
  background-color: #191621;
  -webkit-text-size-adjust: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
}

.hidden { 
  text-indent: -5000px;
}

/**
 * Links
 */
a {
  color: #77ccc9;
  text-decoration: none;
}

a:visited {
  color: #77ccc9;
}

a:hover {
  color: #77ccc9;
  text-decoration: underline;
}


/** 
* 
* homepage site name
* 
**/

/* via http://jsfiddle.net/qB4Z2/ */
/* nav header */
/* todo: rename these */
#sticky-anchor {
  position: absolute;
  top: 50px; /* same-ish as #sticky top */
  left:0;
}

#sticky { 
  position: relative;
  top: 50px;
  left:0;
  margin:0; padding:0;
  padding-bottom:20px;
  text-align: center;
  background-color: black;
  width:100%;
  border:0;
  z-index: 10000;
}

#sticky.stick {
  position: fixed;
  top: 0;
  margin:0; padding:0;
  border:0;
  padding-bottom:20px;
}

/* site title */
.site_name {
  padding: 0; margin:0;
  padding-top:10px;
  transform: scaleY(1.1);
  font-family: orator-std ,sans-serif;
  font-style: normal;
  font-size: 1.7em;
  color: #f7eedf;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 300;
  padding-bottom: 10px;
  /* underline */
  border-bottom: 2px solid #f7eedf;
}

.site_name a {
  color: #f7eedf;
  text-decoration: none;
}

.site_name a:visited {
  color: #f7eedf;
}

.site_name a:hover {
  color: #f7eedf;
}


/**
 * Posts aka projects
 */

/* project banner (image is 4000 × 1200) */
.project_banner {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.project_banner img {
  padding-top:60px;
  flex-shrink: 0;
  width: 100%;
  height: auto;
}

/* sidebar */
.sidebar {
  color: #f7eedf;
  padding: 20px 30px 20px 120px;  
}
/* project title */
.sidebar h1 {
  text-transform: uppercase;
  font-size: 3.3em;
  font-weight: 500;
}
/* project_links */
ul.project_links, ul.tags {
  list-style-type: none;
  margin: 20px 0 10px 0;
}
ul.tags a {
  color:  #f7eedf;
  text-decoration: none;
}
ul.project_links, ul.project_links li {
  padding:0;
}

ul.project_links li {
  padding: 0; 
  font-size: 1.8em;
  padding-left:40px;
  padding-bottom: 20px;
}

.link {
  background: url("/assets/css/link.svg") no-repeat;
  background-size: 1.0em;
}

.twitter {
  background: url("/assets/css/twitter.svg") no-repeat;
  background-size: 1.2em;
}

.facebook {
  background: url("/assets/css/facebook.svg") no-repeat;
  background-size: 1.0em;
}

.twitter, .facebook, .link {
  background-position: 0 5px;
}

/* tags */
ul.tags li {
  display: inline-block;
  padding: 3px 10px;
  margin-right: 5px;
  margin-top:10px;
  white-space: nowrap;
  text-transform: lowercase;
  font-size: 1.8em;
  border: 1px solid #77ccc9;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.small_underline {
  border-bottom: 3px solid #f7eedf;
  margin: 20px 0 50px 0;
  width: 45px;
}

/* project post content section */
.post-content {
  color: #f7eedf;
  font-size: 2.1em;
  font-weight: 100;
  letter-spacing: 2px;

  margin-bottom: 30px;
  padding-top: 15px;
  padding-left: 0;
  padding-right: 40px;
  line-height: 1.7;
  /* letter-spacing: 0.3em */
}
@media (max-width: 768px) {
  /*
  .post-content { 
    padding-left: 30px;
  }
  */

}


/**
 * generated previous pages scraped from old wordpress site;
 */
.scrape_from_old_wordpress img, .scrape_from_old_wordpress em:nth-of-type(1)  {
  /* hide the image and its caption */
  display:none;
}
.scrape_from_old_wordpress {
  padding:0; margin:0;
  margin-top:-30px;
}
.nobanner {
  height:100px;
}


/**
 * 
 * Homepage
 * 
 **/

 /* homepage top banner hero unit image */
.hero-image { /* big hero astronaut image */
  background-image: url('/assets/img/lunarlandscape2.jpg');
  background-size:cover;
  background-position: center center;
  background-color: black;
  height: 230px;
}
.top_margin_adjust {
    margin-top:-51px;
}


.tagline  {
  width:100%;
  margin:0 20px; 
  padding:0;
  margin-top: 50px;
  text-align: center;
}

.tagline h2 {
  color: #7d7b80;
  text-transform: uppercase;
  font-size: 1.2em;
  text-align: center;
  font-weight: 300;
}

/* homepage project list */
.project-grid {
  padding: 50px 25px;
  margin: 0 auto;
}

.project {
  border:0;
  margin:0; padding:0;
  padding: 0 10px;
  position: relative;
  margin-bottom: 20px;
}

.project .circle {
  position: absolute;
  top: 17%;
  left: 0;
  right: 0;
  margin: auto;
  padding: 20px;
  width: 65%;
  height: 70%;
  border-radius: 50%; 
  text-align: center;
  background: black;
  color: #f7eedf;
  background-color: #191621;
  text-transform: uppercase;
}

.project .circle .cat {
  text-align: center;
  position: absolute;
  left: 0;
  top: 26%;
  width: 100%;
  padding:0 20px;
  font-size: 1.2em;
  font-family: orator-std ,sans-serif;
  font-weight: 300;
  letter-spacing: 1px;
}
.project .circle h2 { /* project title */
  text-align: center;
  position: absolute;
  left: 0;
  top: 58%;
  width: 100%;
  padding:0 20px;
  color: #f7eedf;
  font-size: 1.2em;
  font-family: orator-std ,sans-serif;
  font-weight: 300;
  letter-spacing: 2px;
}

.project-underline {
  position: absolute;
  top: 50%;
  left: 25%;
  margin: 0 auto;
  color: #f7eedf;
  width: 50%;
  border-bottom: 2px solid #f7eedf;
}




/**
 * Page content - about page etc
 */
.page-content {
  padding: 30px 0;
}

.page-heading {
  font-size: 20px;
}

.post-list {
  margin-left: 0;
  list-style: none;
}

.post-list > li {
  margin-bottom: 30px;
}

.post-meta {
  font-size: 14px;
  color: #828282;
}

.post-link {
  display: block;
  font-size: 24px;
}


/**
 * Site footer
 */
.site-footer {
  display:none;
  clear:both;
  position: absolute;
  bottom:0;
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

.footer-heading {
  font-size: 18px;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  font-size: 15px;
  color: #828282;
  margin-left: -15px;
}

.footer-col {
  float: left;
  margin-bottom: 15px;
  padding-left: 15px;
}

.footer-col-1 {
  width: -webkit-calc(35% - (30px / 2));
  width: calc(35% - (30px / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (30px / 2));
  width: calc(20% - (30px / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (30px / 2));
  width: calc(45% - (30px / 2));
}
@media screen and (max-width: 800px) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (30px / 2));
    width: calc(50% - (30px / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  };
}
@media screen and (max-width: 600px) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  };
}


/**
 * Blockquotes
 */
blockquote {
  border-left: 4px solid #f7eedf;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic;
}

blockquote > :last-child {
  margin-bottom: 0;
}


/**
 * Wrapper (WTF?)
 */
.wrapper {
  max-width: -webkit-calc(800px - (30px * 2));
  max-width: calc(800px - (30px * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}
@media screen and (max-width: 800px) {
  .wrapper {
    max-width: -webkit-calc(800px - (30px));
    max-width: calc(800px - (30px));
    padding-right: 15px;
    padding-left: 15px;
  };
}


/**
 * Clearfix
 */
.wrapper:after, .footer-col-wrapper:after {
  content: "";
  display: table;
  clear: both;
}


/**
 * Icons
 */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.icon > svg path {
  fill: #828282;
}

